--- a/index.html
+++ b/index.html
@@ -1,82 +1,92 @@
 <!DOCTYPE html>
 <html lang="tr">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <!-- css dosyanızı ekleyiniz-->
-    <link href="https://fonts.googleapis.com/css?family=Caveat|Lato" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Caveat|Lato"
+      rel="stylesheet"
+    />
     <title>Food El Blog</title>
-</head>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<body>
+  <body>
+    <h1>Food El Blog</h1>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">ANASAYFA</a></li>
+          <li><a href="#">APERATİFLER</a></li>
+          <li><a href="#">VEGAN</a></li>
+          <li><a href="#">YEMEKLER</a></li>
+          <li><a href="#">TATLILAR</a></li>
+          <li><a href="#">İÇECEKLER</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <!-- Kurum adı-->
-    Food El Blog
-
-    <!-- Navigation -->
-    Ana Sayfa
-    Aperatifler
-    Vegan
-    Yemekler
-    Tatlılar
-    İçecekler
-    
-    <!-- Image /images/banner.png -->
+    <div aling="center">
+      <img src="banner.jpg" width="900" height="150" />
+    </div>
 
     <!-- Pazarlama başlığı -->
-    Hakkımızda
+    <section id="hakkımızda">
+      <h3>Hakkımızda</h3>
+      <p>
+        Yaygınlaşmış küresel gıda anlayışına göre hamburger; belirli fast food
+        zincirlerinin yapım süreçleri ve kullandıkları malzemeler nedeniyle
+        “sağlıksızdır ve kilo aldırır” gibi negatif bir imaja sahip. Bu nedenle
+        son 10 yılı domine eden sağlıklı yaşam trendleri dışında bırakılmıştır.
+        “Hamburgersiz de yaşanır “, iddialıyız. Fool El Blog, bugüne kadar
+        yediğiniz tüm burgerleri size unutturacak kadar eşsiz yaratıldı.
+      </p>
+    </section>
 
-    Yaygınlaşmış küresel gıda anlayışına göre hamburger; belirli fast food zincirlerinin yapım süreçleri ve kullandıkları 
-    malzemeler nedeniyle “sağlıksızdır ve kilo aldırır” gibi negatif bir imaja sahip. Bu nedenle son 10 yılı domine eden 
-    sağlıklı yaşam trendleri dışında bırakılmıştır.  “Hamburgersiz de yaşanır “, iddialıyız. Fool El Blog, bugüne kadar 
-    yediğiniz tüm burgerleri size unutturacak kadar eşsiz yaratıldı.
+    <div class="yemekler">
+      <img src="yemek_1.jpg" width="250" height="250" />
+      <h3>Yemekler</h3>
+      <p>
+        Bir fırında mantar soslu antrikot Türk mutfağının en özel ve en
+        gösterişli yemeklerinden biri olarak kabul edilir. Bu yemek için dana
+        antrikot özel baharatlarla fırına verilir ve ağızda dağılacak kadar
+        yumuşayarak benzersiz bir deneyim için hazır hale gelir. Yanında sebze
+        sote, mantarlı özel sos ile bu harika şölen tamamlanır.
+      </p>
+    </div>
+    <div class="Aperatifler">
+      <img src="aperatif.jpeg" width="250" height="250" />
+      <h3>Aperatifler</h3>
+      <p>
+        Aperatif Anadolu lezzetlerinden Avrupa’ya varana kadar bir yemek
+        skalasını sizlerle paylaşmak için yola çıktık. İnternet gibi güçlü bir
+        bağ ile mutfaklarınıza misafir olmak niyetindeyiz. E hadi o zaman,
+        müsaitseniz kahvaltıya, belki akşam yemeğine, bilemedin 5 çayına
+        sizdeyiz. Yine de en çok sizleri bize bekleriz. Çünkü sadece bizim
+        mutfağımızın ocağı yanarsa biz sizin o maharetli ellerinizden çıkan
+        lezzetlerin tarifini nereden biliriz. İşte bu yüzden, hadi yine gelin;
+        bizim mutfağın kapısı yok, hep bekleriz.
+      </p>
+    </div>
 
-    <!-- content -->
-
-    <!-- Image /images/yemek_1.jpg -->
-    Yemekler
-
-    Bir fırında mantar soslu antrikot Türk mutfağının en özel ve en gösterişli yemeklerinden biri olarak kabul edilir. 
-
-    Bu yemek için dana antrikot özel baharatlarla fırına verilir ve ağızda dağılacak kadar yumuşayarak benzersiz bir 
-    deneyim için hazır hale gelir. Yanında sebze sote, mantarlı özel sos ile bu harika şölen tamamlanır. 
-    
-    <!-- Image /images/aperatif.jpeg -->
-    Aperatif
-
-    Anadolu lezzetlerinden Avrupa’ya varana kadar bir yemek skalasını sizlerle paylaşmak için yola çıktık. İnternet 
-    gibi güçlü bir bağ ile mutfaklarınıza misafir olmak niyetindeyiz. E hadi o zaman, müsaitseniz kahvaltıya, belki 
-    akşam yemeğine, bilemedin 5 çayına sizdeyiz.
-
-    Yine de en çok sizleri bize bekleriz. Çünkü sadece bizim mutfağımızın ocağı yanarsa biz sizin o maharetli 
-    ellerinizden çıkan lezzetlerin tarifini nereden biliriz. İşte bu yüzden, hadi yine gelin; bizim mutfağın 
-    kapısı yok, hep bekleriz.
-
-
-     <!-- Image /images/tatli_1.jpg -->
-    Tatlılar
-
-    Taptaze tatlılarımız, fırınımız ustalarının özenle hazırladığı pastacı kreması ile buluştu. Her sofraya yakışan 
-    alametifarikalarımız tatlılarımız ile kendinizi ödüllendirin.
-
-    İletişim
-
-    yemek@foodelblog.com
-    216-550-5905
-    Bağdat Cd. No:302/1
-    Kadıköy, İstanbul, 34728
-
-    <!-- footer -->
-    Food El Blog
-
-    Ana Sayfa
-    Aperatifler
-    Vegan
-    Yemekler
-    Tatlılar
-    İçecekler
-
-    @Copyright Food El Blog 2022
-</body>
-
+    <div class="Tatlılar">
+      <img src="tatli_1.jpg" width="250" height="250" />
+      <h3>Tatlılar</h3>
+      <p>
+        Tatlılar Taptaze tatlılarımız, fırınımız ustalarının özenle hazırladığı
+        pastacı kreması ile buluştu. Her sofraya yakışan alametifarikalarımız
+        tatlılarımız ile kendinizi ödüllendirin.
+      </p>
+    </div>
+    <div class="iletişim">
+      <p>
+        İletişim yemek@foodelblog.com 216-550-5905 Bağdat Cd. No:302/1 Kadıköy,
+        İstanbul, 34728
+      </p>
+      <p>
+        Food El Blog Ana Sayfa Aperatifler Vegan Yemekler Tatlılar İçecekler
+        @Copyright Food El Blog 2022
+      </p>
+    </div>
+  </body>
 </html>
