--- a/index.html
+++ b/index.html
@@ -8,85 +8,142 @@
       rel="stylesheet"
     />
     <title>Food El Blog</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/index.css" />
   </head>
 
   <body>
-    <h1>Food El Blog</h1>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">ANASAYFA</a></li>
-          <li><a href="#">APERATİFLER</a></li>
-          <li><a href="#">VEGAN</a></li>
-          <li><a href="#">YEMEKLER</a></li>
-          <li><a href="#">TATLILAR</a></li>
-          <li><a href="#">İÇECEKLER</a></li>
-        </ul>
-      </nav>
-    </header>
+    <!-- Kurum adı-->
+    <div class="container">
+      <header>
+        <h1>Food El Blog</h1>
 
-    <div aling="center">
-      <img src="banner.jpg" width="900" height="150" />
+        <!-- Navigation -->
+
+        <nav>
+          <a href="#">Anasayfa</a>
+          <a href="#">Aperatif</a>
+          <a href="#">Vegan</a>
+          <a href="#">Yemekler</a>
+          <a href="#">Tatlılar</a>
+          <a href="#">İçecekler</a>
+        </nav>
+      </header>
     </div>
 
-    <!-- Pazarlama başlığı -->
-    <section id="hakkımızda">
-      <h3>Hakkımızda</h3>
-      <p>
-        Yaygınlaşmış küresel gıda anlayışına göre hamburger; belirli fast food
-        zincirlerinin yapım süreçleri ve kullandıkları malzemeler nedeniyle
-        “sağlıksızdır ve kilo aldırır” gibi negatif bir imaja sahip. Bu nedenle
-        son 10 yılı domine eden sağlıklı yaşam trendleri dışında bırakılmıştır.
-        “Hamburgersiz de yaşanır “, iddialıyız. Fool El Blog, bugüne kadar
-        yediğiniz tüm burgerleri size unutturacak kadar eşsiz yaratıldı.
-      </p>
+    <!-- Image /images/ -->
+    <section class="grey_background">
+      <div class="container">
+        <img src="/banner.jpg" />
+      </div>
     </section>
 
-    <div class="yemekler">
-      <img src="yemek_1.jpg" width="250" height="250" />
-      <h3>Yemekler</h3>
-      <p>
-        Bir fırında mantar soslu antrikot Türk mutfağının en özel ve en
-        gösterişli yemeklerinden biri olarak kabul edilir. Bu yemek için dana
-        antrikot özel baharatlarla fırına verilir ve ağızda dağılacak kadar
-        yumuşayarak benzersiz bir deneyim için hazır hale gelir. Yanında sebze
-        sote, mantarlı özel sos ile bu harika şölen tamamlanır.
-      </p>
-    </div>
-    <div class="Aperatifler">
-      <img src="aperatif.jpeg" width="250" height="250" />
-      <h3>Aperatifler</h3>
-      <p>
-        Aperatif Anadolu lezzetlerinden Avrupa’ya varana kadar bir yemek
-        skalasını sizlerle paylaşmak için yola çıktık. İnternet gibi güçlü bir
-        bağ ile mutfaklarınıza misafir olmak niyetindeyiz. E hadi o zaman,
-        müsaitseniz kahvaltıya, belki akşam yemeğine, bilemedin 5 çayına
-        sizdeyiz. Yine de en çok sizleri bize bekleriz. Çünkü sadece bizim
-        mutfağımızın ocağı yanarsa biz sizin o maharetli ellerinizden çıkan
-        lezzetlerin tarifini nereden biliriz. İşte bu yüzden, hadi yine gelin;
-        bizim mutfağın kapısı yok, hep bekleriz.
-      </p>
-    </div>
+    <!-- Pazarlama başlığı -->
+    <section class="hakkimizda">
+      <div class="container">
+        <h2>Hakkımızda</h2>
 
-    <div class="Tatlılar">
-      <img src="tatli_1.jpg" width="250" height="250" />
-      <h3>Tatlılar</h3>
-      <p>
-        Tatlılar Taptaze tatlılarımız, fırınımız ustalarının özenle hazırladığı
-        pastacı kreması ile buluştu. Her sofraya yakışan alametifarikalarımız
-        tatlılarımız ile kendinizi ödüllendirin.
-      </p>
-    </div>
-    <div class="iletişim">
-      <p>
-        İletişim yemek@foodelblog.com 216-550-5905 Bağdat Cd. No:302/1 Kadıköy,
-        İstanbul, 34728
-      </p>
-      <p>
-        Food El Blog Ana Sayfa Aperatifler Vegan Yemekler Tatlılar İçecekler
-        @Copyright Food El Blog 2022
-      </p>
-    </div>
+        <p>
+          Yaygınlaşmış küresel gıda anlayışına göre hamburger; belirli fast food
+          zincirlerinin yapım süreçleri ve kullandıkları malzemeler nedeniyle
+          “sağlıksızdır ve kilo aldırır” gibi negatif bir imaja sahip. Bu
+          nedenle son 10 yılı domine eden sağlıklı yaşam trendleri dışında
+          bırakılmıştır. “Hamburgersiz de yaşanır “, iddialıyız. Fool El Blog,
+          bugüne kadar yediğiniz tüm burgerleri size unutturacak kadar eşsiz
+          yaratıldı.
+        </p>
+      </div>
+    </section>
+
+    <!-- content -->
+
+    <!-- Image /images/yemek_1.jpg -->
+    <section class="content">
+      <div class="container content-row">
+        <div class="ortalama">
+          <img src="/yemek_1.jpg" />
+        </div>
+        <div class="ortalama">
+          <h2>Yemekler</h2>
+          <p>
+            Bir fırında mantar soslu antrikot Türk mutfağının en özel ve en
+            gösterişli yemeklerinden biri olarak kabul edilir.
+          </p>
+          <p>
+            Bu yemek için dana antrikot özel baharatlarla fırına verilir ve
+            ağızda dağılacak kadar yumuşayarak benzersiz bir deneyim için hazır
+            hale gelir. Yanında sebze sote, mantarlı özel sos ile bu harika
+            şölen tamamlanır.
+          </p>
+        </div>
+      </div>
+
+      <div class="container content-row">
+        <div class="ortalama">
+          <h2>Aperatifler</h2>
+          <p>
+            Aperatif Anadolu lezzetlerinden Avrupa’ya varana kadar bir yemek
+            skalasını sizlerle paylaşmak için yola çıktık. İnternet gibi güçlü
+            bir bağ ile mutfaklarınıza misafir olmak niyetindeyiz. E hadi o
+            zaman, müsaitseniz kahvaltıya, belki akşam yemeğine, bilemedin 5
+            çayına sizdeyiz.
+          </p>
+          <p>
+            Yine de en çok sizleri bize bekleriz. Çünkü sadece bizim
+            mutfağımızın ocağı yanarsa biz sizin o maharetli ellerinizden çıkan
+            lezzetlerin tarifini nereden biliriz. İşte bu yüzden, hadi yine
+            gelin; bizim mutfağın kapısı yok, hep bekleriz.
+          </p>
+        </div>
+        <div class="ortalama">
+          <img class="aperatif_jpeg" src="/aperatif.jpeg" />
+        </div>
+      </div>
+
+      <div class="container content-row">
+        <div class="ortalama">
+          <img src="/tatli_1.jpg" />
+        </div>
+        <div class="ortalama">
+          <h2>Tatlılar</h2>
+          <p>
+            Tatlılar Taptaze tatlılarımız, fırınımız ustalarının özenle
+            hazırladığı pastacı kreması ile buluştu. Her sofraya yakışan
+            alametifarikalarımız tatlılarımız ile kendinizi ödüllendirin.
+          </p>
+        </div>
+      </div>
+
+      <!-- Image /images/aperatif.jpeg -->
+
+      <!-- Image /images/tatli_1.jpg -->
+    </section>
+
+    <section class="contact-section">
+      <div class="conteiner">
+        <address>
+          <h2>İletişim</h2>
+          <p>yemek@foodelblog.com</p>
+          <p>216-550-5905</p>
+          <p>Bağdat Cd. No:302/1</p>
+          <p>Kadıköy,İstanbul, 34728</p>
+        </address>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <div class="footer-content">
+        <h2>Food El Blog</h2>
+        <nav>
+          <a href="#">Ana Sayfa </a>
+          <a href="#">Aperatifler</a>
+          <a href="#">Vegan</a>
+          <a href="#">Yemekler</a>
+          <a href="#">Tatlılar</a>
+          <a href="#">İçecekler</a>
+        </nav>
+        <p class="copyright">@Copyright Food El Blog 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
