resimlere images ekleme yapıldı

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Image /images/ -->
     <section class="grey_background">
       <div class="container">
-        <img src="/banner.jpg" />
+        <img src="/images/banner.jpg" />
       </div>
     </section>
 
@@ -60,7 +60,7 @@
     <section class="content">
       <div class="container content-row">
         <div class="ortalama">
-          <img src="/yemek_1.jpg" />
+          <img src="/images/yemek_1.jpg" />
         </div>
         <div class="ortalama">
           <h2>Yemekler</h2>
@@ -95,13 +95,13 @@
           </p>
         </div>
         <div class="ortalama">
-          <img class="aperatif_jpeg" src="/aperatif.jpeg" />
+          <img class="aperatif_jpeg" src="/images/aperatif.jpeg" />
         </div>
       </div>
 
       <div class="container content-row">
         <div class="ortalama">
-          <img src="/tatli_1.jpg" />
+          <img src="/images/tatli_1.jpg" />
         </div>
         <div class="ortalama">
           <h2>Tatlılar</h2>
